# unity-pix

./: .gitignore  LICENSE.md  README.md
.github/workflows/: build_native_plugin.yml  create_release.yml  version_tag.yml
ProjectSettings/: ProjectSettings.asset
UnityPix/: .clang-format  .clang-tidy  CMakeLists.txt
UnityPix/src/: .clang-format  main.cpp  main.def
UnityPix/src/Dx12/: CMakeLists.txt
UnityPix/src/UnityHeaders/: CMakeLists.txt
UnityPix/src/UnityHeaders/include/Unity/: IUnityRenderingExtensions.h  IUnityShaderCompilerAccess.h
UnityPix/src/WinPixEventRuntime/: CMakeLists.txt
